# APICookieJSON

./: .gitignore  .secrets.toml  README.md  cache.json  pyproject.toml  requirements.txt
APICookieJson/: __init__.py  app.py
APICookieJson/controllers/: __init__.py  controllers.py
APICookieJson/core/: __init__.py  auth.py  cache.py  security.py
APICookieJson/routes/: routes.py
APICookieJson/templates/: error.html  home.html  index.html  layout.html
