[tool.poetry]
name = "apicookiejson"
version = "0.1.0"
description = "Sistema de Sessão utilizando cookies e armazenamento em JSON."
authors = ["Nicolas Albuquerque Ramos <nicolasalbuquerque581@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
gunicorn = "^21.2.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"

[tool.black]
skip-string-normalization = true
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
